--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1> Welcome to PSA</h1>
+        <p> Download Visual Studio Code
+            Free and built on open source. Integrated Git, debugging and extensions.
+        </p>
     </body>
 </html>
