--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <p> Download Visual Studio Code
             Free and built on open source. Integrated Git, debugging and extensions.
         </p>
+        <h2>New H3 Tag Added by Narasimha </h2>
     </body>
 </html>
