Added - 4 row  from Git Hub

--- a/table.html
+++ b/table.html
@@ -27,7 +27,12 @@
             <tr>
                 <td>3</td>
                 <td>Vamsi</td>
-                <td> SE</td>
+                <td> SE</td> 
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Kartik - USA</td>
+                <td> Amezon Customer Service</td>
             </tr>
         </table>
     </body>
