--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 		<hr/>
 		<form action="/send.php" method="">
 			<label>First Name:</label>
-				<input type="text" value=" Please Enter your First Name" required /><br/><br/>
+				<input type="text"   required /><br/><br/>
 			<label>Last Name:</label>
 				<input type="text"/><br/><br/>
 			<label>Password:</label>
@@ -22,8 +22,8 @@
 			<label>Email and SMS Notification</label>
 				<input type="checkbox"><br/><br/>
 			<label>Why?</label>
-				<textarea rows="5"></textarea><br/><br/>
-			<input type="button" value="signup"></input><br/><br/>
+				<textarea rows="5" cols="55"></textarea><br/><br/>
+			<button > Signup  </button>
 			
 		
 		</form>
